# django_homework

./: .env.sample  .gitignore  logger.py  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_category_create_at.py  0003_remove_category_create_at.py  0004_blogpost_alter_category_name.py
catalog/templates/catalog/: base.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  blogpost_update.html  category_detail.html  contacts.html  home.html  product_detail.html  product_details.html  product_form.html  product_list.html  products.html  version_form.html  version_list.html
catalog/templates/catalog/includes/: inc_catalog_footer.html  inc_catalog_menu.html
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: login.html  register.html  user_form.html
